<resources>

    <string name="app_name">SeoulGogi</string>
    <string name="menu_settings">Settings</string>

    <!-- TODO: 박기한은 무조건 이곳을 번역해야 합니다. 영어로.. -->
    <string name="menu1">서울고깃집 소개</string>
    <string name="menu1_1">서울고깃집에 대한 소개를 보여줍니다.</string>
    <string name="menu1_2">강남구 청담동에 위치한! 소고기 전문점입니다. 갈비살, 안창살, 꽃살등의 구이 메뉴와 매운갈비찜, 갈비탕, 냉면 등의 식사 메뉴가 준비되어 있습니다. "단체모임 환영, 주차가능, Wi-Fi가능" 강남구 청담동에 위치한! 소고기 전문점입니다. 갈비살, 안창살, 꽃살등의 구이 메뉴와 매운갈비찜, 갈비탕, 냉면 등의 식사 메뉴가 준비되어 있습니다. "단체모임 환영, 주차가능, Wi-Fi가능" 강남구 청담동에 위치한! 소고기 전문점입니다. 갈비살, 안창살, 꽃살등의 구이 메뉴와 매운갈비찜, 갈비탕, 냉면 등의 식사 메뉴가 준비되어 있습니다. "단체모임 환영, 주차가능, Wi-Fi가능" 강남구 청담동에 위치한! 소고기 전문점입니다. 갈비살, 안창살, 꽃살등의 구이 메뉴와 매운갈비찜, 갈비탕, 냉면 등의 식사 메뉴가 준비되어 있습니다. "단체모임 환영, 주차가능, Wi-Fi가능" 강남구 청담동에 위치한! 소고기 전문점입니다. 갈비살, 안창살, 꽃살등의 구이 메뉴와 매운갈비찜, 갈비탕, 냉면 등의 식사 메뉴가 준비되어 있습니다. "단체모임 환영, 주차가능, Wi-Fi가능" 강남구 청담동에 위치한! 소고기 전문점입니다. 갈비살, 안창살, 꽃살등의 구이 메뉴와 매운갈비찜, 갈비탕, 냉면 등의 식사 메뉴가 준비되어 있습니다. "단체모임 환영, 주차가능, Wi-Fi가능" 강남구 청담동에 위치한! 소고기 전문점입니다. 갈비살, 안창살, 꽃살등의 구이 메뉴와 매운갈비찜, 갈비탕, 냉면 등의 식사 메뉴가 준비되어 있습니다. "단체모임 환영, 주차가능, Wi-Fi가능" 강남구 청담동에 위치한! 소고기 전문점입니다. 갈비살, 안창살, 꽃살등의 구이 메뉴와 매운갈비찜, 갈비탕, 냉면 등의 식사 메뉴가 준비되어 있습니다. "단체모임 환영, 주차가능, Wi-Fi가능" </string>
    <string name="menu2">메뉴 소개</string>
    <string name="menu2_1">서울고깃집에 있는 다양한 메뉴를 볼 수 있습니다.</string>
	<string name="menu3">오시는 길</string>
	<string name="menu3_1">서울고깃집의 위치 및 찾아 오시는 길을 알려 드립니다.</string>
	<string name="menu4">예약 현황 / 예약하기</string>
	<string name="menu4_1">현재 예약된 현황을 보거나, 새로 예약을 하실 수 있습니다.</string>
	<string name="menu5">개발자에 대하여...</string>
	<string name="menu5_1">이 애플리케이션의 개발자 소개 및 정보를 봅니다.</string>
	<string name="return_main">본 메뉴를 터치하시면, 다시 메인화면으로 돌아갑니다.</string>
    
</resources>