<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        android:src="@drawable/seoulgogi_bg" />
    
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadingEdge="none"
        android:scrollbars="none"
        android:overScrollMode="never" >

        <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical">
            
            <!-- Invisible area xD -->

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/bg_padding"
                android:background="#00000000"
                android:visibility="visible" />

            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="@drawable/shadow" />
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="@drawable/tile_bg" android:orientation="vertical">
                <!-- 서울고깃집 타이틀 -->
                <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:scaleType="centerInside" android:src="@drawable/title" />
                
                
                <!-- 리스트 박스(바깥쪽 도형) -->
                <LinearLayout android:background="@drawable/listview_outer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin" android:layout_marginRight="@dimen/margin" android:orientation="vertical">
                    <!-- 안쪽 도형 -->
	                <LinearLayout android:background="@drawable/listview_inner" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="1px" android:orientation="vertical">
            			<!-- 서울고깃집 소개 -->
            			<RelativeLayout android:id="@+id/menu_1" android:layout_width="fill_parent" android:layout_height="350dp" android:background="@drawable/ics" android:clickable="true" android:focusable="true">
            			    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerVertical="true" android:orientation="vertical">

            			        <TextView android:layout_width="fill_parent" android:layout_marginLeft="16dp" android:layout_height="wrap_content" android:text="@string/menu1" android:textSize="14dp" android:textColor="#252525" android:textStyle="bold" />
            			        <TextView android:layout_width="fill_parent" android:layout_marginLeft="16dp" android:layout_height="wrap_content" android:text="@string/return_main" android:textSize="10dp" android:textColor="#505050"/>
            			    	<TextView android:layout_width="fill_parent" android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:layout_height="wrap_content" android:text="@string/menu1_2" android:textSize="10dp" android:textColor="#505050" android:layout_marginTop="7dp"/>
            			    </LinearLayout>
            			</RelativeLayout>
            			<LinearLayout android:layout_width="fill_parent" android:layout_height="1px" android:background="#9c9c9c" />
            		</LinearLayout>
                </LinearLayout>

                
                
                <!-- 잉크 로고 -->
				<ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/about" android:layout_marginTop="30dp" android:scaleType="centerInside" />

 
            </LinearLayout>
        </LinearLayout> 
    </ScrollView>

    

</FrameLayout>
